feat: Integrate Firebase for real-time workshop data
Replaces the localStorage simulation with Firebase Firestore to enable real-time data synchronization for workshop participants, introductions, teams, and other workshop-related states.

This change includes:
- Adding Firebase dependencies to `package.json`.
- Configuring Firebase in `firebaseConfig.ts` using environment variables.
- Updating `index.html`'s import map to include Firebase.
- Modifying `geminiService.ts` to use `saveWorkshopData` and `listenForWorkshopUpdates` (implementing the Firestore save and listen logic).
- Adjusting `AppContext.tsx` to use the new `saveWorkshopData` and `listenForWorkshopUpdates` functions, and to correctly handle team updates with scores.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.1",
     "@google/genai": "^1.17.0",
     "lucide-react": "^0.418.0",
-    "canvas-confetti": "^1.9.3"
+    "canvas-confetti": "^1.9.3",
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
